# hotkeyboard

./: .gitignore  README.md  stimboard.kicad_pcb  stimboard.kicad_prl  stimboard.kicad_pro  stimboard.kicad_sch
firmware/: Cargo.toml  README.md  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs  parameters.rs
