[package]
name = "hotkeyboard-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = { version = "0.4.0", optional = true }
embedded-hal = "0.2.7"
heapless = "0.7.16"
nb = "1.1.0"
panic-halt = "0.2.0"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f042", "stm32-usbd"] }
usb-device = "0.2.9"
usbd-human-interface-device = "0.4.2"

[features]
default = []
defmt = ["defmt-rtt"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 2
codegen-units = 1

